@@ -1,3 +1,8 @@
+2006-01-06 Mikhail Khodjaiants
+	Cleanup.
+	* CArgumentsTab.java
+	* CMainTab.java
+
 2005-12-20 Mikhail Khodjaiants
 	Bug 121474: NPE in CDebuggerTab.
 	* CDebuggerTab.java
